--- a/app/src/main/res/layout/activity_cards.xml
+++ b/app/src/main/res/layout/activity_cards.xml
@@ -7,6 +7,7 @@
     android:clipToPadding="false"
     tools:context=".MainActivity">
 
+    <!-- Usar RecyclerView, o ListView caiu em decrapted -->
     <ListView
         android:id="@+id/list_cards"
         android:layout_width="match_parent"
