--- a/app/src/main/res/layout/activity_cards.xml
+++ b/app/src/main/res/layout/activity_cards.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_cards"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipToPadding="false"
-    tools:context=".MainActivity">
+    tools:context=".ui.activity.MainActivity">
 
-    <!-- Usar RecyclerView, o ListView caiu em decrapted -->
-    <ListView
-        android:id="@+id/list_cards"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/activity_cards"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="@android:color/transparent"/>
+        tools:listitem="@layout/card_item"/>
 
 </RelativeLayout>
