--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="low_fork">#ffdc004e</color>
+    <color name="medium_fork">#ffff9800</color>
+    <color name="high_fork">#ff64b5f6</color>
 </resources>
