--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,10 +3,11 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="teal_200">#60E0A0</color>
+    <color name="teal_700">#60E0A0</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="default_card">#d3d3d3</color>
     <color name="low_fork">#ffdc004e</color>
     <color name="medium_fork">#ffff9800</color>
     <color name="high_fork">#ff64b5f6</color>
