--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,9 +7,9 @@
         <!--TODO: esse atributo tu pode setar no layout/view -->
         <!-- OK - cor alterada diretamente no themes.xml -->
 
-        <item name="colorPrimary">#643cb4</item>
-        <item name="colorPrimaryVariant">#643cb4</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">#60E0A0</item>
+        <item name="colorPrimaryVariant">#60E0A0</item>
+        <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
@@ -22,9 +22,9 @@
     <style name="Theme.GitHubChallenge.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+
     </style>
 
     <style name="Theme.GitHubChallenge.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
     <style name="Theme.GitHubChallenge.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
